# spel1

./: .gitignore  CMakeLists.txt  main.cpp
